<?xml version="1.0"?>
<package>
  <name>wts_driver</name>
  <version>1.0.4</version>
  <description>The wts_driver package</description>

  <maintainer email="chitt@live.in">Chittaranjan Srinivas Swaminathan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>